Updated generated code

--- a/02_ps.md
+++ b/02_ps.md
@@ -318,17 +318,15 @@ contract SimpleStorage {
 Here is the client library generated which is generated from the ABI [^1]
 
 ```haskell
-count :: forall e p . IsAsyncProvider p
-      => Address
-      -> Maybe Address
-      -> CallMode
-      -> Web3 p e (UIntN (D2 :& D5 :& D6))
-
-setCount :: forall e p . IsAsyncProvider p
-         => Maybe Address
-         -> Address
-         -> UIntN (D2 :& D5 :& D6)
-         -> Web3 p e HexString
+ count :: forall e 
+        . TransactionOptions NoPay 
+        -> ChainCursor 
+        -> Web3 e (Either CallError (UIntN (D2 :& D5 :& DOne D6)))
+ 
+ setCount :: forall e
+           . TransactionOptions Wei 
+           -> { _count :: (UIntN (D2 :& D5 :& DOne D6)) } 
+           -> Web3 e HexString
 
 newtype CountSet =
   CountSet { _count :: UIntN (D2 :& D5 :& D6) }
@@ -342,24 +340,6 @@ newtype CountSet =
 2. You don't want to access the raw encoders/decoders manually when templating your transactions, laborious and potentially error prone.
 3. The generator is meant to be run as an `npm build` step - any breaking changes to your contracts will cause compile time errors in your application.
 4. Specially generated types allow for higher levels of abstraction in library.
-
----
-
-## Generator - How does it work
-As an example, take a function call that generates a transaction:
-
-```haskell
-type SetCountFn = Tagged (SProxy "setCount(uint256)") (Tuple1 (UIntN (D2 :& D5 :& D6)))
-
-setCount :: forall e p . IsAsyncProvider p
-         => Maybe Address
-         -> Address
-         -> UIntN (D2 :& D5 :& D6)
-         -> Web3 p e HexString
-setCount x0 x1 x2 = sendTx x0 x1 noPay ((tagged $ Tuple1 x2) :: SetCountFn)
-```
-
-Notice the `noPay`
 
 ---
 
