--- a/02_ps.md
+++ b/02_ps.md
@@ -120,7 +120,7 @@ uIntNFromBigNumber :: forall n . KnownSize n
                    => BigNumber
                    -> Maybe (UIntN n)
 
-type UInt = UIntN (D2 :& D5 :& D6)
+type UInt = UIntN S256
 ```
 
 ---
@@ -318,15 +318,15 @@ Here is the client library generated which is generated from the ABI [^1]
  count :: forall e 
         . TransactionOptions NoPay 
         -> ChainCursor 
-        -> Web3 e (Either CallError (UIntN (D2 :& D5 :& DOne D6)))
+        -> Web3 e (Either CallError (UIntN S256))
  
  setCount :: forall e
            . TransactionOptions Wei 
-           -> { _count :: (UIntN (D2 :& D5 :& DOne D6)) } 
+           -> { _count :: (UIntN S256) } 
            -> Web3 e HexString
 
 newtype CountSet =
-  CountSet { _count :: UIntN (D2 :& D5 :& D6) }
+  CountSet { _count :: UIntN S256 }
 ```
 [^1]: There are a few other boiler plate type declarations that are generated, but this is pretty much it.
 
