--- a/02_ps.md
+++ b/02_ps.md
@@ -85,8 +85,7 @@
 ---
 
 ### Sized Types
-- Purescript does not as of yet have type level naturals
-- Luckily we don't need infinitely many
+- Purescript does not have type level naturals, but we don't need infinitely many
 
 ```haskell
 module Network.Ethereum.Web3.Solidity.Size where
@@ -139,7 +138,7 @@ bools = true :< false :< true :< nilVector
 ---
 
 ### Tuples
-- The EVM is a stack based virtual machine with a maximum depth of 16. Limits the possible tuple sizes.
+- The EVM limits the possible tuple sizes.
 
 ```haskell
 data Tuple0 = Tuple0
@@ -197,7 +196,7 @@ data Argument a = Argument a
 data Product a b = Product a b
 data Constructor (s :: Symbol) a = Constructor a
 
-from (Tuple3 Bool String (UInt D8)) ::
+from (Tuple3 Bool String (UIntN (DOne 8)) ::
   Constructor "Tuple3" (Product (Argument Bool) (Product (Argument String) (Argument UInt (DOne D8))))
 ```
 
@@ -353,13 +352,14 @@ event :: forall e a i ni.
 - Since the return value of the handler is always `ContinueEvent`, this poll never terminates.
 
 ```haskell
-monitorCount :: R.ComponentDidMount CountStateProps CountState (eth :: ETH | eff)
+monitorCount :: R.ComponentDidMount CountStateProps (UIntN (D2 :& D5 :% D6)) (eth :: ETH | eff)
 monitorCount this = void $ do
   props <- R.getProps this
+  let countFilter = eventFilter (Proxy :: SimpleStorage.CountState)
   launchAff do
     void $ runWeb3 metamask $
       event config.simpleStorageAddress $ \(SimpleStorage.CountSet cs) -> do
-      _ <- liftEff <<< R.transformState this $ _{currentCount= show cs._count}
+      _ <- liftEff <<< R.transformState this $ _{currentCount = cs._count}
       pure ContinueEvent
 ```
 ---
