--- a/02_ps.md
+++ b/02_ps.md
@@ -95,7 +95,7 @@ foreign import data D0 :: Digit
 foreign import data D9 :: Digit
 data (:&) :: Digit -> DigitList -> DigitList
 
-class KnownSize (d :: DigitList) 
+class KnownSize (d :: DigitList)
 class KnownSize n <= ByteSize n
 class KnownSize n <= IntSize n
 ```
@@ -110,9 +110,10 @@ class KnownSize n <= IntSize n
 ```haskell
 newtype UIntN n = UIntN BigNumber
 
-uIntNFromBigNumber :: forall n . KnownSize n
-                   => BigNumber
-                   -> Maybe (UIntN n)
+uIntNFromBigNumber 
+  :: forall n . KnownSize n
+  => BigNumber
+  -> Maybe (UIntN n)
 
 type UInt = UIntN S256
 ```
@@ -126,10 +127,26 @@ newtype Vector (n :: DigitList) a = Vector (Array a)
 
 nilVector :: forall a . Vector (DOne D0) a
 
-vCons :: forall a n nInc. Inc n nInc => a -> Vector n a -> Vector nInc a
+vCons 
+  :: forall a n nInc
+   . Inc n nInc 
+  => a 
+  -> Vector n a 
+  -> Vector nInc a
 infixr 6 vCons as :<
+```
 
-toVector :: forall a n . KnownSize n => DLProxy n -> Array a -> Maybe (Vector n a)
+---
+
+### Length Indexed Vectors (contd.)
+
+```haskell
+toVector 
+  :: forall a n 
+   . KnownSize n 
+  => DLProxy n 
+  -> Array a 
+  -> Maybe (Vector n a)
 
 bools :: Vector (DOne D3) Boolean
 bools = true :< false :< true :< nilVector
@@ -139,6 +156,7 @@ bools = true :< false :< true :< nilVector
 
 ### Tuples
 - The EVM limits the possible tuple sizes.
+- First iteration of `purescript-web3` didn't handle these well.
 
 ```haskell
 data Tuple0 = Tuple0
@@ -151,8 +169,6 @@ data Tuple16 a b c d e f g h i j k l m n o p =
   Tuple16 a b c d e f g h i j k l m n o p
 
 ```
-- First iteration of `purescript-web3` didn't handle these well.
-
 ---
 
 ## Basic Codecs
@@ -166,11 +182,17 @@ class ABIDecode a where
   fromDataParser :: Parser String a
 ```
 
+## Basic Codecs (contd.)
+
 ```haskell
-instance abiEncodeIntN :: IntSize n => ABIEncode (IntN n) where
+instance abiEncodeIntN
+  :: IntSize n 
+  => ABIEncode (IntN n) where
   toDataBuilder a = int256HexBuilder <<< unIntN $ a
 
-instance abiDecodeIntN :: IntSize n => ABIDecode (IntN n) where
+instance abiDecodeIntN 
+  :: IntSize n 
+  => ABIDecode (IntN n) where
   fromDataParser = do
     a <- int256HexParser
     maybe (fail $ msg a) pure <<< intNFromBigNumber (DLProxy :: DLProxy n) $ a
@@ -207,13 +229,15 @@ from (Tuple3 Bool String (UIntN (DOne 8)) ::
 - We can inductively build up generic types to have a certain property, such as `ABIEncode`
 
 ```haskell
-instance genericEncodeBase :: ABIEncode a
-                           => GenericABIEncode (Argument a)
+instance genericEncodeBase 
+  :: ABIEncode a
+  => GenericABIEncode (Argument a)
 
-instance genericEncodeInductive :: ( ABIEncode a
-                                   , GenericABIEncode b
-                                   )
-               => GenericABIEncode (Product (Argument a) b)
+instance genericEncodeInductive 
+  :: ( ABIEncode a
+     , GenericABIEncode b
+     )
+  => GenericABIEncode (Product (Argument a) b)
 ```
 
 ---
@@ -223,9 +247,9 @@ instance genericEncodeInductive :: ( ABIEncode a
 - code utilizing "generics" is extremely reusable.
 
 ```haskell
-genericEncode ::
-  forall a rep .
-     Generic a rep
+genericEncode 
+  :: forall a rep
+   . Generic a rep
   => GenericABIEncode rep
   => a
   -> HexString
@@ -236,14 +260,23 @@ genericABIEncode = genericToDataBuilder <<< from
 
 ## Web3 API
 - The Web3 API is a set of RPC methods that the ethereum client knows about
-- There are a lot, the type signatures serve as a sort of [documentation](https://pursuit.purescript.org/packages/purescript-web3/0.9.0/docs/Network.Ethereum.Web3.Api)
+- Type signatures serve as a sort of [documentation](https://pursuit.purescript.org/packages/purescript-web3/0.9.0/docs/Network.Ethereum.Web3.Api)
 
 ```haskell
-eth_sendTransaction :: forall e . TransactionOptions Wei -> Web3 e HexString
+eth_sendTransaction 
+  :: forall e 
+   . TransactionOptions Wei 
+  -> Web3 e HexString
 
-eth_newFilter :: forall a e . Filter a -> Web3 e FilterId
+eth_newFilter 
+  :: forall a e 
+   . Filter a 
+  -> Web3 e FilterId
 
-eth_getFilterChanges :: forall e . FilterId -> Web3 e (Array Change)
+eth_getFilterChanges 
+  :: forall e 
+   . FilterId 
+  -> Web3 e (Array Change)
 ...
 ```
 
@@ -252,7 +285,12 @@ eth_getFilterChanges :: forall e . FilterId -> Web3 e (Array Change)
 ## Web3 API
 - How easy is it to add new endpoints as they are released?
 ```haskell
-personal_sign :: forall e. HexString -> Address -> Maybe String -> Web3 e HexString
+personal_sign 
+  :: forall e
+   . HexString 
+  -> Address 
+  -> Maybe String 
+  -> Web3 e HexString
 ```
 [Pretty easy!](https://github.com/f-o-a-m/purescript-web3/blob/master/src/Network/Ethereum/Web3/Api.purs)
 
@@ -272,30 +310,30 @@ Simple Storage allows us to change a `uint256`, query that state, and listen for
 
 ```javascript
 contract SimpleStorage {
-    
     uint public count;
-
     event CountSet(uint _count);
-    
     function setCount(uint _count) {
         count = _count;
         CountSet(_count);
     }
 }
+```
 
 ## Generator - Simple Storage
 Here is the client library generated which is generated from the ABI [^1]
 
 ```haskell
- count :: forall e. 
-          TransactionOptions NoPay 
-       -> ChainCursor 
-       -> Web3 e (Either CallError (UIntN S256))
+count 
+  :: forall e
+   . TransactionOptions NoPay 
+  -> ChainCursor 
+  -> Web3 e (Either CallError (UIntN S256))
  
- setCount :: forall e.
-             TransactionOptions Wei 
-          -> { _count :: (UIntN S256) } 
-          -> Web3 e HexString
+setCount 
+  :: forall e
+   . TransactionOptions Wei 
+  -> { _count :: (UIntN S256) } 
+  -> Web3 e HexString
 
 newtype CountSet = CountSet { _count :: UIntN S256 }
 ```
@@ -334,25 +372,26 @@ class TxMethod (selector :: Symbol) a where
 ## Generator - Events
  - Events were difficult to find a good solution for due to the Ethereum log structure.
  - All events can be handled with the `event` method, which similarly defined in `hs-web3`
+ - This looks more complicated than it is..
+
 
 ```haskell
-event :: forall e a i ni.
-         DecodeEvent i ni a
-      => Filter a
-      -> (a -> ReaderT Change (Web3 e) EventAction)
-      -> Web3 e Unit
+event 
+  :: forall e a i ni
+   . DecodeEvent i ni a
+  => Filter a
+  -> (a -> ReaderT Change (Web3 e) EventAction)
+  -> Web3 e Unit
 
 ```
-- this looks more complicated than it is.
-
 ---
 
 ## Events - Example
 - Here's an example of the event monitor in the example app. It registers a handler and asynchronously polls a filter for the `CountSet` event, updating the React component's state.
-- Since the return value of the handler is always `ContinueEvent`, this poll never terminates.
 
 ```haskell
-monitorCount :: R.ComponentDidMount CountStateProps (UIntN (D2 :& D5 :% D6)) (eth :: ETH | eff)
+monitorCount 
+  :: R.ComponentDidMount CountStateProps (UIntN S256) (eth :: ETH | eff)
 monitorCount this = void $ do
   props <- R.getProps this
   let countFilter = eventFilter (Proxy :: SimpleStorage.CountState)
@@ -363,5 +402,3 @@ monitorCount this = void $ do
       pure ContinueEvent
 ```
 ---
-
-
